2022-09-08T16:09:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016594994
* notice: last 14d: unq all: 7 12
* notice: prev accum: outdated-unq outdated-all / unq all: 19 52 / 25 61
* notice: next accum: outdated-unq outdated-all / unq all: 19 52 / 26 64
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-07T08:12:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3006036836
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 25 58
* notice: next accum: outdated-unq outdated-all / unq all: 19 52 / 25 61
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-24] / []

2022-09-07T00:40:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3004308741
* notice: last 14d: unq all: 7 10
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 25 61
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 25 58
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -3 / +1 +4 -0 -3 / 1 1
* notice: removed / changed dates: [] / [2022-08-24]

2022-09-05T16:08:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994687645
* notice: last 14d: unq all: 7 13
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 24 60
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 25 61
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-05]

2022-09-05T00:44:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990153247
* notice: last 14d: unq all: 6 12