@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 7,
+  "count": 11,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
