@@ -1,3 +1,11 @@
+2022-09-09T00:41:07Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3019210567
+* notice: last 14d: unq all: 6 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 19 52 / 26 64
+* notice: next accum: outdated-unq outdated-all / unq all: 20 53 / 26 64
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-25] / []
+
 2022-09-08T16:09:14Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016594994
 * notice: last 14d: unq all: 7 12
